<resources>
    <string name="app_name">SongGuessr</string>
    <string name="app_title">SongGuessr</string>
    <string name="action_settings">Settings</string>
    <string name="action_share">Share Score</string>
    <string name="action_info">How to play</string>

    <string name="num_guesses">Guesses Remaining: %1$s</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="pref_game_settings">Game Settings</string>
    <string name="pref_guesses_title">Select Number of Guesses</string>
    <string name="pref_guesses_key">guesses</string>

    <string name="pref_rounds_title">Select Number of Rounds</string>
    <string name="pref_rounds_key">rounds</string>

    <string name="pref_playlist_genre">Select a Playlist Genre</string>
    <string name="pref_playlist_key">genre</string>

    <string name="pref_playlist_entry_country">Country</string>
    <string name="pref_playlist_entry_rap">Rap</string>
    <string name="pref_playlist_entry_rock">Rock</string>
    <string name="pref_playlist_entry_pop">Pop</string>
    <string name="pref_playlist_entry_goodmusic">good music</string>

    <string name="pref_playlist_val_country" translatable="false">country</string>
    <string name="pref_playlist_val_rap" translatable="false">rap</string>
    <string name="pref_playlist_val_rock" translatable="false">rock</string>
    <string name="pref_playlist_val_pop" translatable="false">pop</string>
    <string name="pref_playlist_val_goodmusic" translatable="false">good music</string>

    <string name="pref_playlist_default">@string/pref_playlist_val_country</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="guess_prompt">Guess the song name</string>
    <string name="guess">Guess</string>
    <string name="guess_correct">✔️ Correct!!!</string>
    <string name="guess_incorrect">❌ Incorrect</string>

    <!-- Dialog box-->
    <string name="dialog_title">Final Score:</string>
    <string name="dialog_close">Close</string>
    <string name="dialog_share">Share</string>
</resources>