<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_action_info"
        android:title="@string/action_info"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_action_share"
        android:title="@string/action_share"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_play"
        android:icon="@drawable/action_pause"
        android:title = "action_play"
        android:checkable="true"
        app:showAsAction= "always" />

    <item
        android:id="@+id/action_skip"
        android:icon="@drawable/action_skip"
        android:title="action_skip"
        app:showAsAction="always"
        />
</menu>